DTHFLU340 - ajustes na API para projeto Login Único
