# thf-conference-api/controllers/Auth.js
@@ -4,18 +4,15 @@ const utils = require('../utils/writer.js');
 const Auth = require('../service/AuthService');
 
 module.exports.authLoginPOST = function authLoginPOST (req, res, next) {
-  const body = req.swagger.params['body'].value;
-  
-  Auth.authLoginPOST(body)
+  var authorization = req.swagger.params['Authorization'].value;
+  var body = req.swagger.params['body'].value;
+
+  Auth.authLoginPOST(authorization,body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      if (response === 400) {
-        utils.writeJson(res, "", response);
-      } else {
-        utils.writeJson(res, response);
-      }
+      utils.writeJson(res, response, Number(response.code));
     });
 };
 
